--- a/style.css
+++ b/style.css
@@ -68,6 +68,7 @@ header{
     color: var(--secondary-color);
     text-align: center;
     padding: 1.5rem 0;
+    border-radius: 1rem;
 }
 nav ul{
    margin: 0;
